adds basic router

--- a/public/404.html
+++ b/public/404.html
@@ -5,15 +5,12 @@
 <head>
   <title>Notes App</title>
   <meta charset="utf-8" />
-  
-   <link rel="stylesheet" href="css/main.css" />
-  <script src="js/main.js"></script>
-  
+
 </head>
 
 <body>
   <div id="app-container">
-    <h2> Notes App</h2>
+    <h2>404- Not found</h2>
   </div>
 </body>
 
