--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,53 @@
 <head>
   <title>Notes App</title>
   <meta charset="utf-8" />
-  
-   <link rel="stylesheet" href="css/main.css" />
+
+  <link rel="stylesheet" href="css/main.css" />
   <script src="js/main.js"></script>
-  
+
 </head>
+
 
 <body>
   <div id="app-container">
-    <h2> Notes App</h2>
+    <h2 class='app-title'>
+      Notes App
+
+      <span>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z" />
+        </svg>
+      </span>
+
+    </h2>
+
+    <div class="notes-list-panel">
+      <div class="list-item">
+        <h3>Item 1</h3>
+        <p>content</p>
+      </div>
+      <div class="list-item">
+        <h3>Item 2</h3>
+        <p>content</p>
+      </div>
+      <div class="list-item">
+        <h3>Item 3</h3>
+        <p>content</p>
+      </div>
+      <div class="list-item">
+        <h3>Item 4</h3>
+        <p>content</p>
+      </div>
+      <div class="list-item">
+        <h3>Item 5</h3>
+        <p>content</p>
+      </div>
+    </div>
+    <div class="notes-view">
+      hello
+    </div>
   </div>
 </body>
 
