basic controller to return notes json

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div id="app-container">
-    <h2 class='app-title'>
+    <h2 id='app-title'>
       Notes App
 
       <span>
@@ -27,30 +27,11 @@
 
     </h2>
 
-    <div class="notes-list-panel">
-      <div class="list-item">
-        <h3>Item 1</h3>
-        <p>content</p>
-      </div>
-      <div class="list-item">
-        <h3>Item 2</h3>
-        <p>content</p>
-      </div>
-      <div class="list-item">
-        <h3>Item 3</h3>
-        <p>content</p>
-      </div>
-      <div class="list-item">
-        <h3>Item 4</h3>
-        <p>content</p>
-      </div>
-      <div class="list-item">
-        <h3>Item 5</h3>
-        <p>content</p>
-      </div>
+
+    <div id="notes-list-panel">
+      Loading.....
     </div>
-    <div class="notes-view">
-      hello
+    <div id="notes-view">
     </div>
   </div>
 </body>
