adds toolbar + ui layout

--- a/public/index.html
+++ b/public/index.html
@@ -17,21 +17,51 @@
     <h2 id='app-title'>
       Notes App
 
-      <span>
+      <span id="logo">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <path d="M0 0h24v24H0z" fill="none" />
           <path
             d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z" />
         </svg>
       </span>
-
     </h2>
 
 
-    <div id="notes-list-panel">
-      Loading.....
-    </div>
-    <div id="notes-view">
+    <div id="app-func-container">
+      <div id="notes-toolbar">
+
+        <span id="delete-note">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -2 24 24" width="24">
+            <path d="M0 0h24v24H0z" fill="none" />
+            <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z" />
+          </svg>
+        </span>
+
+        <span id="add-note">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -2 24 24" width="24">
+            <path d="M0 0h24v24H0z" fill="none" />
+            <path
+              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z" />
+          </svg>
+        </span>
+
+        <span id="auto-save">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M0 0h24v24H0z" fill="none" />
+            <path d="M5 4v2h14V4H5zm0 10h4v6h6v-6h4l-7-7-7 7z" />
+          </svg>
+          Auto saving
+        </span>
+      </div>
+
+      <div id="app-notes-container">
+        <div id="notes-list-panel">
+          Loading.....
+        </div>
+        <div id="notes-view">
+        </div>
+      </div>
+
     </div>
   </div>
 </body>
