--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/main.css" />
   <script src="js/main.js"></script>
 
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 </head>
 
 
@@ -58,11 +60,16 @@
           Loading.....
         </div>
         <div id="notes-view">
+          <div id="editor">
+
+          </div>
         </div>
       </div>
 
     </div>
   </div>
+
+
 </body>
 
 </html>
